PROJECT(AGENTS_ROBOT3D_PLUGIN)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake/")

FIND_PACKAGE(Robot3D REQUIRED)

if(ROBOT3D_FOUND)
    INCLUDE_DIRECTORIES(${ROBOT3D_INCLUDE_DIR} ${ROBOT_BASE_INCLUDE_DIR})
    LINK_DIRECTORIES(${ROBOT3D_LIBRARY_DIR} ${ROBOT_BASE_LIBRARY_DIR})
    MESSAGE( STATUS ${INDENT} "ROBOT3D_LIBRARIES=${ROBOT3D_LIBRARY}" )
else(ROBOT3D_FOUND)
    MESSAGE(FATAL_ERROR "Robot3D is not found, aborting")
endif(ROBOT3D_FOUND)

SET(morphAgent_SOURCES ${morphAgent_SOURCES}
	robot3d_robot.cc 
	robot3d_main.cc 
)

ADD_LIBRARY(morphAgent SHARED ${morphAgent_SOURCES})
TARGET_LINK_LIBRARIES(morphAgent ${ROBOT3D_LIBRARY} ${ROBOT_BASE_LIBRARY})

INSTALL(TARGETS morphAgent DESTINATION /usr/lib/robot3d/components/plugins/agents)
